# chuk-artifacts

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
diagnostics/: filesystem_debug.py  filesystem_provider.py  filesystem_runner.py  filesystem_store.py  ibm_cos_diagnostic.py  ibm_cos_hmac_runner.py  ibm_cos_signature_tester.py  memory_provider.py  memory_runner.py  memory_store.py  s3_debug.py  s3_provider.py  s3_runner.py  s3_store.py
docs/: PHASE_1_SCOPE_STORAGE.md
examples/: 00_quick_start.py  01_blob_namespace_basics.py  02_workspace_namespace_basics.py  03_unified_everything_is_vfs.py  04_legacy_api_compatibility.py  05_advanced_vfs_features.py  06_session_isolation.py  07_large_files_streaming.py  08_batch_operations.py  09_mcp_server_integration.py  README.md  VFS_API_REFERENCE.md  artifact_grid_demo.py  artifact_usage_examples.py  chuk_session_example.py  clean_test.py  federation_demo.py  grid_demo.py  mcp_test_demo.py  multipart_demo.py  session_id_demo.py  session_operations_demo.py  smoke_run.py  streaming_demo.py  usage_examples_demo.py  user_storage_demo.py  vfs_provider_demo.py
src/chuk_artifacts/: __init__.py  admin.py  base.py  batch.py  core.py  grid.py  metadata.py  models.py  namespace.py  presigned.py  provider_factory.py  session_operations.py  store.py  types.py
src/chuk_artifacts/federation/: __init__.py  manager.py  store.py
src/chuk_artifacts/providers/: filesystem.py  ibm_cos.py
src/chuk_artifacts/session/: session_manager.py
tests/: test_base.py  test_core.py  test_grid.py  test_metadata.py  test_models.py  test_namespace.py  test_presigned.py  test_security_robustness.py  test_store.py  test_store_coverage.py  test_store_enhanced.py  test_types.py
tests/providers/: test_filesystem_coverage.py  test_filesystem_provider.py  test_ibm_cos_coverage.py  test_ibm_cos_iam_provider.py  test_ibm_cos_provider.py  test_ibmcos_provider.py  test_memory_provider.py  test_s3_coverage.py  test_s3_provider.py  test_vfs_adapter.py
