[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chuk-artifacts"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
  "chuk-tool-processor>=0.1.7",
  "pydantic>=2.10.6",
  "pyyaml>=6.0.2",
  "aioboto3>=14.3.0",
  "redis>=6.2.0",
  "ibm-cos-sdk>=2.13.5",
  "chuk-sessions>=0.1.0",
]

[project.optional-dependencies]
websocket = ["websockets>=10.0"]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "ruff>=0.4.6",
]
