[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chuk-artifacts"
version = "0.3"
description = "Chuk Artifacts provides a production-ready, modular artifact storage system that works seamlessly across multiple storage backends (memory, filesystem, AWS S3, IBM Cloud Object Storage) with Redis or memory-based metadata caching and strict session-based security."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "chuk-tool-processor>=0.4",
  "pydantic>=2.10.6",
  "pyyaml>=6.0.2",
  "aioboto3>=14.3.0",
  "redis>=6.2.0",
  "ibm-cos-sdk>=2.13.5",
  "chuk-sessions>=0.3",
]

[project.optional-dependencies]
websocket = ["websockets>=10.0"]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "ruff>=0.4.6",
]

[tool.pytest.ini_options]
# Pytest configuration for chuk-artifacts
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short", 
    "--strict-markers",
    "--strict-config",
    "--durations=10",
    "-ra"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests", 
    "security: marks tests as security-focused tests",
    "performance: marks tests as performance tests"
]
filterwarnings = [
    "ignore::DeprecationWarning:chuk_sessions.*",
    "ignore::pytest.PytestDeprecationWarning",
    "ignore::pytest.PytestUnknownMarkWarning"
]